--- a/Cogs 109_housing.ipynb
+++ b/Cogs 109_housing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,12 +21,14 @@
     "import statsmodels.api as sm\n",
     "from scipy.stats import pearsonr\n",
     "from statsmodels.regression.linear_model import OLS\n",
-    "from sklearn.metrics import mean_squared_error"
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn import preprocessing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +150,7 @@
        "4       565.0       259.0         3.8462            342200.0        NEAR BAY  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +182,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +214,7 @@
        "Name: total_bedrooms, Length: 1923, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +234,7 @@
        "207"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +273,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +298,7 @@
        "Name: ocean_proximity, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +343,7 @@
        "Name: ocean_proximity, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +486,7 @@
        "4       565.0       259.0         3.8462                3            342200.0  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -513,6 +515,260 @@
    ],
    "source": [
     "pd.plotting.scatter_matrix(df,figsize=(20,20));"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>housing_median_age</th>\n",
+       "      <th>total_rooms</th>\n",
+       "      <th>total_bedrooms</th>\n",
+       "      <th>population</th>\n",
+       "      <th>households</th>\n",
+       "      <th>median_income</th>\n",
+       "      <th>ocean_proximity</th>\n",
+       "      <th>median_house_value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.211155</td>\n",
+       "      <td>0.567481</td>\n",
+       "      <td>0.784314</td>\n",
+       "      <td>0.022331</td>\n",
+       "      <td>0.019863</td>\n",
+       "      <td>0.008941</td>\n",
+       "      <td>0.020556</td>\n",
+       "      <td>0.539668</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.902266</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.212151</td>\n",
+       "      <td>0.565356</td>\n",
+       "      <td>0.392157</td>\n",
+       "      <td>0.180503</td>\n",
+       "      <td>0.171477</td>\n",
+       "      <td>0.067210</td>\n",
+       "      <td>0.186976</td>\n",
+       "      <td>0.538027</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.708247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.210159</td>\n",
+       "      <td>0.564293</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.037260</td>\n",
+       "      <td>0.029330</td>\n",
+       "      <td>0.013818</td>\n",
+       "      <td>0.028943</td>\n",
+       "      <td>0.466028</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.695051</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.209163</td>\n",
+       "      <td>0.564293</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.032352</td>\n",
+       "      <td>0.036313</td>\n",
+       "      <td>0.015555</td>\n",
+       "      <td>0.035849</td>\n",
+       "      <td>0.354699</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.672783</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.209163</td>\n",
+       "      <td>0.564293</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.041330</td>\n",
+       "      <td>0.043296</td>\n",
+       "      <td>0.015752</td>\n",
+       "      <td>0.042427</td>\n",
+       "      <td>0.230776</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.674638</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20635</th>\n",
+       "      <td>0.324701</td>\n",
+       "      <td>0.737513</td>\n",
+       "      <td>0.470588</td>\n",
+       "      <td>0.042296</td>\n",
+       "      <td>0.057883</td>\n",
+       "      <td>0.023599</td>\n",
+       "      <td>0.054103</td>\n",
+       "      <td>0.073130</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.130105</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20636</th>\n",
+       "      <td>0.312749</td>\n",
+       "      <td>0.738576</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.017676</td>\n",
+       "      <td>0.023122</td>\n",
+       "      <td>0.009894</td>\n",
+       "      <td>0.018582</td>\n",
+       "      <td>0.141853</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.128043</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20637</th>\n",
+       "      <td>0.311753</td>\n",
+       "      <td>0.732200</td>\n",
+       "      <td>0.313725</td>\n",
+       "      <td>0.057277</td>\n",
+       "      <td>0.075109</td>\n",
+       "      <td>0.028140</td>\n",
+       "      <td>0.071041</td>\n",
+       "      <td>0.082764</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.159383</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20638</th>\n",
+       "      <td>0.301793</td>\n",
+       "      <td>0.732200</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.047256</td>\n",
+       "      <td>0.063315</td>\n",
+       "      <td>0.020684</td>\n",
+       "      <td>0.057227</td>\n",
+       "      <td>0.094295</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.143713</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20639</th>\n",
+       "      <td>0.309761</td>\n",
+       "      <td>0.725824</td>\n",
+       "      <td>0.294118</td>\n",
+       "      <td>0.070782</td>\n",
+       "      <td>0.095438</td>\n",
+       "      <td>0.038790</td>\n",
+       "      <td>0.086992</td>\n",
+       "      <td>0.130253</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.153403</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>20433 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       longitude  latitude  housing_median_age  total_rooms  total_bedrooms  \\\n",
+       "0       0.211155  0.567481            0.784314     0.022331        0.019863   \n",
+       "1       0.212151  0.565356            0.392157     0.180503        0.171477   \n",
+       "2       0.210159  0.564293            1.000000     0.037260        0.029330   \n",
+       "3       0.209163  0.564293            1.000000     0.032352        0.036313   \n",
+       "4       0.209163  0.564293            1.000000     0.041330        0.043296   \n",
+       "...          ...       ...                 ...          ...             ...   \n",
+       "20635   0.324701  0.737513            0.470588     0.042296        0.057883   \n",
+       "20636   0.312749  0.738576            0.333333     0.017676        0.023122   \n",
+       "20637   0.311753  0.732200            0.313725     0.057277        0.075109   \n",
+       "20638   0.301793  0.732200            0.333333     0.047256        0.063315   \n",
+       "20639   0.309761  0.725824            0.294118     0.070782        0.095438   \n",
+       "\n",
+       "       population  households  median_income  ocean_proximity  \\\n",
+       "0        0.008941    0.020556       0.539668             0.75   \n",
+       "1        0.067210    0.186976       0.538027             0.75   \n",
+       "2        0.013818    0.028943       0.466028             0.75   \n",
+       "3        0.015555    0.035849       0.354699             0.75   \n",
+       "4        0.015752    0.042427       0.230776             0.75   \n",
+       "...           ...         ...            ...              ...   \n",
+       "20635    0.023599    0.054103       0.073130             0.25   \n",
+       "20636    0.009894    0.018582       0.141853             0.25   \n",
+       "20637    0.028140    0.071041       0.082764             0.25   \n",
+       "20638    0.020684    0.057227       0.094295             0.25   \n",
+       "20639    0.038790    0.086992       0.130253             0.25   \n",
+       "\n",
+       "       median_house_value  \n",
+       "0                0.902266  \n",
+       "1                0.708247  \n",
+       "2                0.695051  \n",
+       "3                0.672783  \n",
+       "4                0.674638  \n",
+       "...                   ...  \n",
+       "20635            0.130105  \n",
+       "20636            0.128043  \n",
+       "20637            0.159383  \n",
+       "20638            0.143713  \n",
+       "20639            0.153403  \n",
+       "\n",
+       "[20433 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Normalizing Data\n",
+    "scaler = MinMaxScaler()\n",
+    "\n",
+    "df_standardize = pd.DataFrame(scaler.fit_transform(df), columns=df.columns, index=df.index) \n",
+    "df_standardize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Standardizing data\n",
+    "standard = preprocessing.scale(X_data)\n",
+    "print(standard)"
    ]
   },
   {
