--- a/Cogs 109_housing.ipynb
+++ b/Cogs 109_housing.ipynb
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +747,7 @@
        "[20433 rows x 10 columns]"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,19 +756,41 @@
     "#Normalizing Data\n",
     "scaler = MinMaxScaler()\n",
     "\n",
-    "df_standardize = pd.DataFrame(scaler.fit_transform(df), columns=df.columns, index=df.index) \n",
-    "df_standardize"
+    "df_normalize = pd.DataFrame(scaler.fit_transform(df), columns=df.columns, index=df.index) \n",
+    "df_normalize"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "longitude             1.000024\n",
+       "latitude              1.000024\n",
+       "housing_median_age    1.000024\n",
+       "total_rooms           1.000024\n",
+       "total_bedrooms        1.000024\n",
+       "population            1.000024\n",
+       "households            1.000024\n",
+       "median_income         1.000024\n",
+       "ocean_proximity       1.000024\n",
+       "median_house_value    1.000024\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Standardizing data\n",
-    "standard = preprocessing.scale(X_data)\n",
-    "print(standard)"
+    "df_standard = pd.DataFrame(preprocessing.scale(df))\n",
+    "df_standard.columns = df.columns\n",
+    "df_standard.std()"
    ]
   },
   {
